# samc

./: .gitignore  Cargo.toml  README.md  requirements.txt  web.py
app/: __init__.py  config.py  main.py  model.py
app/routers/: __init__.py  file.py  render.py  sam.py  utils.py
crates/segment/: Cargo.toml
crates/segment/examples/: sam copy.rs  sam.rs
crates/segment/src/: lib.rs  polygon.rs
crates/segment/src/polygon/: mod.rs
crates/segment/src/segment_anything/: image_encoder.rs  mask_decoder.rs  mod.rs  prompt_encoder.rs  sam.rs  tiny_vit.rs  transformer.rs
crates/server/: Cargo.toml
crates/server/src/: asset.rs  config.rs  error.rs  lib.rs  main.rs  render.rs  server.rs  state.rs
crates/server/src/route/: img.rs  mod.rs  sam.rs
crates/server/testdata/: rotate.txt
docs/: bruno.json  files.bru  sam.bru
docs/environments/: dev.bru
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
web/src/: App.vue  main.js  style.css
web/src/model/: index.js
web/src/plugins/: axios.js
web/src/theme/: preset.js
web/src/utils/: index.js
web/src/views/: Sam.vue  Sam.vue.bak
