[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
name = "samc"
version = "0.1.0"
edition = "2021"
authors = ["zfuqiong"]


[workspace.dependencies]

hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
anyhow = "1.0.71"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["json"]}