[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = {version = "0.7.4", features = ["multipart","ws"]}
axum-extra = {version = "*",features = ["typed-header"]}
image = "0.25.0"
bytes = "1.5.0"
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tower-http = {version = "0.5.0", features = ["fs","cors"]}
tokio = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
hyper = {workspace = true}
hyper-util = {workspace = true}
thiserror ={ workspace = true }
rust-embed="8.3.0"
anyhow = {workspace = true}
envy = "0.4.2"
mime_guess = "2.0.4"
segment ={ path = "../segment"}
reqwest = { version = "0.12.2", features = ["json","multipart","rustls-tls"], default-features = false }
